--- a/style.css
+++ b/style.css
@@ -223,3 +223,131 @@ h3{
 	opacity: 1;
 
 }
+
+
+
+/* -----------facilities----------- */
+
+
+
+.facilities{
+	width: 80%;
+	margin: auto;
+	text-align: center;
+	padding-top:100px;
+}
+.facilities-column{
+	flex-basis: 31%;
+	border-radius: 10px;
+	margin-bottom: 5%;
+	text-align: left; 
+}
+.facilities-column img{
+	width: 100%;
+	border-radius: 10px;
+}
+.facilities-column p{
+	padding: 0;
+}
+.facilities-column h3{
+	margin-top: 16px;
+	margin-bottom: 15px;
+	text-align: left;
+}
+
+
+/* -----------testimonials----------- */
+
+.testimonials{
+	width: 80%;
+	margin: auto;
+	padding-top: 100px;
+	text-align: center;
+}
+.testimonials-col{
+	flex-basis: 44%;
+	border-radius: 10px;
+	margin-bottom: 5%;
+	text-align: left;
+	background:#fff3f3;
+	padding: 20px;
+	cursor: pointer;
+	display: flex;
+}
+
+.testimonials-col img{
+	height: 40px;
+	margin-left: 5px;
+	margin-right: 30px;
+	border-radius: 50%;
+}
+.testimonials-col p{
+	padding: 0;
+}
+
+.testimonials-col h3{
+	margin-top: 15px;
+	text-align: left;
+}
+.testimonials-col .fa{
+	color: #f44336;
+}
+@media (max-width: 700px){
+	.testimonials-col img{
+		
+		margin-left: 0px;
+		margin-right: 15px;
+		
+}
+}
+
+/* -----------call to action----------- */
+
+.cta{
+	margin: 100px auto;
+	width: 80%;
+	background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url(images/banner2.jpg);
+	background-position: center;
+	background-size: cover;
+	border-radius: 10px;
+	text-align: center;
+	padding: 100px 0; 
+}
+
+.cta h1{
+	color: #fff;
+	margin-bottom: 40px;
+	padding: 0; 
+}
+
+@media(max-width: 700px){
+	.cta h1{
+	font-size: 24px;
+}
+
+}
+
+/* -----------footer----------- */
+
+.footer{
+	width: 100%;
+	text-align: center;
+	padding: 30px 0;
+}
+
+.footer h4{
+	margin-bottom: 25px;
+	margin-top: 20px;
+	font-weight: 600;
+}
+
+.icons .fa{
+	color: #f44336;
+	margin: 0 13px;
+	cursor: pointer;
+	padding: 18px 0;
+}
+
+.fa-heart-o{
+	color: #f44336;
+}
