editing blog page

--- a/style.css
+++ b/style.css
@@ -393,3 +393,54 @@ h3{
 .red-btn:hover{
 	color:#fff;
 }
+
+/* -----------blog content----------- */
+
+.blog-content{
+	width: 80%;
+	margin: auto;
+	padding: 60px 0;
+}
+.blog-left{
+	flex-basis: 65%;
+
+}
+.blog-left img{
+	width: 100%;
+}
+.blog-left h2{
+	color: #222;
+	font-weight: 600;
+	margin: 30px 0;
+}
+
+.blog-left p{
+	padding: 0;
+	color: #999;
+}
+
+.blog-right{
+	flex-basis: 32%;
+}
+.blog-right h3{
+	background: #f44336;
+	color: #fff;
+	padding: 7px 0
+	font-size: 16px;
+	margin-bottom: 20px; 
+}
+
+.blog-right div{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	color: #555;
+	padding: 8px;
+	box-sizing: border-box;
+}
+.comment-box{
+	border: 1px solid #ccc;
+	margin: 50px 0;
+	padding: 10px 20px;
+
+}
