--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ nav .fa{
 		display: block;
  	}
  	.nav-links{
- 		position: absolute;
+ 		position: fixed;
  		background: #f44336;
  		height: 100vh;
  		width: 200px;
@@ -334,13 +334,11 @@ h3{
 	text-align: center;
 	padding: 30px 0;
 }
-
 .footer h4{
 	margin-bottom: 25px;
 	margin-top: 20px;
 	font-weight: 600;
 }
-
 .icons .fa{
 	color: #f44336;
 	margin: 0 13px;
@@ -403,7 +401,6 @@ h3{
 }
 .blog-left{
 	flex-basis: 65%;
-
 }
 .blog-left img{
 	width: 100%;
@@ -413,12 +410,10 @@ h3{
 	font-weight: 600;
 	margin: 30px 0;
 }
-
 .blog-left p{
 	padding: 0;
 	color: #999;
 }
-
 .blog-right{
 	flex-basis: 32%;
 }
@@ -429,7 +424,6 @@ h3{
 	font-size: 16px;
 	margin-bottom: 20px; 
 }
-
 .blog-right div{
 	display: flex;
 	align-items: center;
@@ -442,5 +436,76 @@ h3{
 	border: 1px solid #ccc;
 	margin: 50px 0;
 	padding: 10px 20px;
+}
+.comment-box h3{
+	text-align: left;
+}
+.comment-form input, .comment-form textarea{
+	width: 100%;
+	padding: 10px;
+	margin: 15px 0;
+	box-sizing: border-box;
+	border:none;
+	outline:none;
+	background: #f0f0f0;
+}
+.comment-form button{
+	margin: 10px 0;
+}
 
+@media(max-width: 700px){
+	.sub-header h1{
+		font-size: 24px;
+	}
+}
+
+/* Contact Us*/
+
+.location{
+	width: 80%;
+	margin: auto;
+	padding: 80px 0;
+}
+
+.location iframe{
+	width: 100%;
+}
+.contact-us{
+	width: 80%;
+	margin: auto;
+}
+
+.contact-col{
+	flex-basis: 48%;
+	margin-bottom: 30px;
+} 
+.contact-col div{
+	display: flex;
+	align-items: center;
+	margin-bottom: 40px;
+}
+
+.contact-col div .fa{
+	font-size: 28px;
+	color: #f44336;
+	margin: 10px;
+	margin-right: 30px;
+}
+
+.contact-col div p{
+	padding: 0;
+}
+.contact-col div h5{
+	font-size: 20px;
+	margin-bottom: 5px;
+	color:#555;
+	font-weight: 400;
+}
+.contact-col input, .contact-col textarea{
+	width: 100%;
+	padding: 15px;
+	margin-bottom: 17px;
+	outline: none;
+	border: 1px solid #ccc;
+	box-sizing: border-box;
 }
